--- a/source/less/blocks/form-page.less
+++ b/source/less/blocks/form-page.less
@@ -4,13 +4,15 @@
   font-size: 36px;
   line-height: 36px;
   font-weight: 400;
-}
 
-@media (min-width: @tablet-width) {
-  .form-page__title {
+  @media (min-width: @tablet-width) {
     padding: 20px 69px 54px;
     font-size: 60px;
     line-height: 60px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 20px 110px 56px;
   }
 }
 
@@ -18,9 +20,5 @@
   .form-page {
     margin: 0 auto 0 auto;
     // width: 90%;
-  }
-
-  .form-page__title {
-    padding: 20px 110px 56px;
   }
 }
