--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -16,6 +16,7 @@
   padding-top: 3px;
   background-image: url("../img/burger-menu-mob.svg");
   background-repeat: no-repeat;
+  cursor: pointer;
 }
 
 @media (min-width: @tablet-width) {
