--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -2,16 +2,13 @@
   background-color: #ffffff;
   margin: 0 auto;
   padding: 0;
-}
+  width: 100%;
 
-@media (min-width: @tablet-width) {
-  .page__body {
+  @media (min-width: @tablet-width) {
     width: 768px;
   }
-}
 
-@media (min-width: @desktop-width) {
-  .page__body {
+  @media (min-width: @desktop-width) {
     width: 1440px;
   }
 }
