--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,5 +1,13 @@
 .advantages {
   padding: 20px;
+
+  @media (min-width: @tablet-width) {
+    padding: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 0 110px 68px;
+  }
 }
 
 .advantages__title {
@@ -9,15 +17,127 @@
   line-height: 40px;
   margin: 0;
   padding-bottom: 42px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    padding-bottom: 32px;
+  }
 }
 
 .advantages__list {
   list-style-type: none;
   padding: 0;
+  text-align: left;
+  max-width: 325px;
+
+  @media (min-width: @tablet-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 280px 280px;
+    row-gap: 37px;
+    max-width: unset;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
 
-.advantages__item:not(:last-child) {
-  padding-bottom: 26px;
+.advantages__item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60px;
+
+  p {
+    align-items: center;
+  }
+
+  &:not(:last-child) {
+    padding-bottom: 26px;
+  }
+
+  @media (min-width: @tablet-width) {
+    height: auto;
+    align-items: unset;
+
+    p {
+      padding: 0;
+    }
+
+    &:first-child {
+      background-image: url("../img/advantages__number-1.png");
+      background-repeat: no-repeat;
+      background-position: bottom 10% right 23%;
+      width: 230px;
+      padding: 157px 0 57px;
+      margin-right: 153px;
+    }
+
+    &:nth-child(2) {
+      background-image: url("../img/advantages__number-2.png");
+      background-repeat: no-repeat;
+      background-position: bottom 10% right 0%;
+      width: 230px;
+      padding: 157px 0 57px;
+    }
+
+    &:nth-child(3) {
+      background-image: url("../img/advantages__number-3.png");
+      background-repeat: no-repeat;
+      background-position: bottom 10% right 0%;
+      width: 230px;
+      padding: 157px 0 57px;
+    }
+
+    &:last-child {
+      background-image: url("../img/advantages__number-4.png");
+      background-repeat: no-repeat;
+      background-position: bottom 10% right 0%;
+      width: 230px;
+      padding: 157px 0 57px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 151px 0 57px 0;
+
+    &:first-child {
+      background-image: url("../img/advantages__number-1.png");
+      background-repeat: no-repeat;
+      background-position: bottom 10% right 23%;
+      width: 230px;
+      padding: 157px 0 57px;
+      margin-right: 0;
+    }
+
+    &:nth-child(2) {
+      background-image: url("../img/advantages__number-2.png");
+      background-repeat: no-repeat;
+      background-position: bottom 10% right 0%;
+      width: 230px;
+      padding: 157px 0 57px;
+    }
+
+    &:nth-child(3) {
+      background-image: url("../img/advantages__number-3.png");
+      background-repeat: no-repeat;
+      background-position: bottom 10% right 0%;
+      width: 230px;
+      padding: 157px 0 57px;
+    }
+
+    &:last-child {
+      background-image: url("../img/advantages__number-4.png");
+      background-repeat: no-repeat;
+      background-position: bottom 10% right 0%;
+      width: 230px;
+      padding: 157px 0 57px;
+    }
+  }
 }
 
 .advantages__description {
@@ -28,192 +148,107 @@
   margin: 0;
   padding-left: 80px;
   position: relative;
+
+  @media (min-width: @tablet-width) {
+    .advantages__description {
+      font-size: 16px;
+      line-height: 24px;
+      padding-left: 0;
+      width: 204px;
+    }
+  }
 }
 
-.advantages__description--nutrients::before {
-  content: "";
-  background-image: url("../img/advantages__nutrients.png");
-  width: 60px;
-  height: 60px;
-  position: absolute;
-  left: 0;
-  top: -3px;
-}
-
-.advantages__description--consistency::before {
-  content: "";
-  background-image: url("../img/advantages__consistency.png");
-  width: 60px;
-  height: 60px;
-  position: absolute;
-  left: 0;
-  top: -3px;
-}
-
-.advantages__description--meal::before {
-  content: "";
-  background-image: url("../img/advantages__meal.png");
-  width: 60px;
-  height: 60px;
-  position: absolute;
-  left: 0;
-  top: -3px;
-}
-
-.advantages__description--duration::before {
-  content: "";
-  background-image: url("../img/advantages__duration.png");
-  width: 60px;
-  height: 60px;
-  position: absolute;
-  left: 0;
-  top: -3px;
-}
-
-@media (min-width: @tablet-width) {
-  .advantages {
-    padding: 30px;
-  }
-
-  .advantages__title {
-    font-size: 60px;
-    line-height: 60px;
-    padding-bottom: 32px;
-  }
-
-  .advantages__list {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 280px 280px;
-    row-gap: 37px;
-  }
-
-  .advantages__item:first-child {
-    background-image: url("../img/advantages__number-1.png");
-    background-repeat: no-repeat;
-    background-position: bottom 10% right 23%;
-    width: 230px;
-    padding: 157px 0 57px;
-    margin-right: 153px;
-  }
-
-  .advantages__item:nth-child(2) {
-    background-image: url("../img/advantages__number-2.png");
-    background-repeat: no-repeat;
-    background-position: bottom 10% right 0%;
-    width: 230px;
-    padding: 157px 0 57px;
-  }
-
-  .advantages__item:nth-child(3) {
-    background-image: url("../img/advantages__number-3.png");
-    background-repeat: no-repeat;
-    background-position: bottom 10% right 0%;
-    width: 230px;
-    padding: 157px 0 57px;
-  }
-
-  .advantages__item:last-child {
-    background-image: url("../img/advantages__number-4.png");
-    background-repeat: no-repeat;
-    background-position: bottom 10% right 0%;
-    width: 230px;
-    padding: 157px 0 57px;
-  }
-
-  .advantages__description {
-    font-size: 16px;
-    line-height: 24px;
-    padding-left: 0;
-    width: 204px;
-  }
-
-  .advantages__description--nutrients::before {
-    background-image: url("../img/advantages__nutrients--desk.png");
-    width: 80px;
-    height: 80px;
+.advantages__nutrients {
+  &::before {
+    content: "";
+    background-image: url("../img/advantages__nutrients.png");
+    width: 60px;
+    height: 60px;
+    position: absolute;
     left: 0;
-    top: -110px;
+    top: -3px;
   }
 
-  .advantages__description--consistency {
+  @media (min-width: @tablet-width) {
+    &::before {
+      background-image: url("../img/advantages__nutrients--desk.png");
+      width: 80px;
+      height: 80px;
+      left: 0;
+      top: -110px;
+    }
+  }
+}
+
+.advantages__consistency {
+  &::before {
+    content: "";
+    background-image: url("../img/advantages__consistency.png");
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    left: 0;
+    top: -3px;
+  }
+
+  @media (min-width: @tablet-width) {
     width: 224px;
-  }
 
-  .advantages__description--consistency::before {
-    background-image: url("../img/advantages__consistency--desk.png");
-    width: 80px;
-    height: 80px;
-    left: 0;
-    top: -110px;
-  }
-
-  .advantages__description--meal::before {
-    background-image: url("../img/advantages__meal--desk.png");
-    width: 80px;
-    height: 80px;
-    left: 0;
-    top: -110px;
-  }
-
-  .advantages__description--duration {
-    width: 245px;
-  }
-
-  .advantages__description--duration::before {
-    background-image: url("../img/advantages__duration--desk.png");
-    width: 80px;
-    height: 80px;
-    left: 0;
-    top: -110px;
+    &::before {
+      background-image: url("../img/advantages__consistency--desk.png");
+      width: 80px;
+      height: 80px;
+      left: 0;
+      top: -110px;
+    }
   }
 }
 
-@media (min-width: @desktop-width) {
-  .advantages {
-    padding: 0 110px 68px;
+.advantages__meal {
+  &::before {
+    content: "";
+    background-image: url("../img/advantages__meal.png");
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    left: 0;
+    top: -3px;
   }
 
-  .advantages__list {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  @media (min-width: @tablet-width) {
+    &::before {
+      background-image: url("../img/advantages__meal--desk.png");
+      width: 80px;
+      height: 80px;
+      left: 0;
+      top: -110px;
+    }
+  }
+}
+
+.advantages__duration {
+  &::before {
+    content: "";
+    background-image: url("../img/advantages__duration.png");
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    left: 0;
+    top: -3px;
   }
 
-  .advantages__item {
-    padding: 151px 0 57px 0;
-  }
+  @media (min-width: @tablet-width) {
+    .advantages__duration {
+      width: 245px;
+    }
 
-  .advantages__item:first-child {
-    background-image: url("../img/advantages__number-1.png");
-    background-repeat: no-repeat;
-    background-position: bottom 10% right 23%;
-    width: 230px;
-    padding: 157px 0 57px;
-    margin-right: 0;
-  }
-
-  .advantages__item:nth-child(2) {
-    background-image: url("../img/advantages__number-2.png");
-    background-repeat: no-repeat;
-    background-position: bottom 10% right 0%;
-    width: 230px;
-    padding: 157px 0 57px;
-  }
-
-  .advantages__item:nth-child(3) {
-    background-image: url("../img/advantages__number-3.png");
-    background-repeat: no-repeat;
-    background-position: bottom 10% right 0%;
-    width: 230px;
-    padding: 157px 0 57px;
-  }
-
-  .advantages__item:last-child {
-    background-image: url("../img/advantages__number-4.png");
-    background-repeat: no-repeat;
-    background-position: bottom 10% right 0%;
-    width: 230px;
-    padding: 157px 0 57px;
+    &::before {
+      background-image: url("../img/advantages__duration--desk.png");
+      width: 80px;
+      height: 80px;
+      left: 0;
+      top: -110px;
+    }
   }
 }
