--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -8,6 +8,16 @@
   font-size: 24px;
   line-height: 26px;
   font-weight: 400;
+
+  @media (min-width: @tablet-width) {
+    font-size: 36px;
+    line-height: 36px;
+    padding-bottom: 76px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 110px;
+  }
 }
 
 .form__description {
@@ -17,31 +27,66 @@
   line-height: 18px;
   font-weight: 400;
   text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    padding: 0 70px 66px;
+    font-size: 20px;
+    line-height: 30px;
+    width: 323px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 0 110px 66px;
+    width: 323px;
+  }
 }
 
 .form__list {
   list-style-type: none;
   padding: 0;
   margin: 0;
-}
 
-.form__list li {
-  display: flex;
-  align-items: center;
-}
+  label {
+    text-transform: uppercase;
+    font-size: 16px;
+    line-height: 18px;
+  }
 
-.form__list label {
-  text-transform: uppercase;
-  font-size: 16px;
-  line-height: 18px;
+  li {
+    display: flex;
+    align-items: center;
+  }
+
+  @media (min-width: @tablet-width) {
+    label {
+      font-size: 20px;
+      line-height: 30px;
+    }
+  }
 }
 // FIRST SECTION
 .form__field-group--pet {
   padding-bottom: 24px;
-}
 
-.form__field-group--pet li:not(:last-child) {
-  padding-bottom: 14px;
+  li:not(:last-child) {
+    padding-bottom: 14px;
+  }
+
+  @media (min-width: @tablet-width) {
+    padding: 0 0 72px 0;
+
+    li:not(:last-child) {
+      padding-bottom: 20px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 0;
+
+    li:not(:last-child) {
+      padding-bottom: 20px;
+    }
+  }
 }
 
 .form__pet-label {
@@ -60,6 +105,22 @@
   text-transform: uppercase;
   border: 1px solid rgba(231, 231, 231, 1);
   width: 100%;
+
+  @media (min-width: @tablet-width) {
+    height: 52px;
+    padding: 11px 20px;
+    font-size: 20px;
+    line-height: 30px;
+    border: 1px solid #e7e7e7;
+  }
+
+  @media (min-width: @desktop-width) {
+    height: 52px;
+    padding: 11px 20px;
+    font-size: 20px;
+    line-height: 30px;
+    border: 1px solid #e7e7e7;
+  }
 }
 
 // .form__pet-input::-webkit-outer-spin-button,
@@ -69,37 +130,81 @@
 
 .form__field-group--radios {
   padding: 28px 0 25px;
+
+  @media (min-width: @tablet-width) {
+    padding: 0 0 49px 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 0;
+  }
 }
 
 .form__title--email-tel {
   max-width: 190px;
   position: relative;
-}
 
-.form__title--email-tel::before {
-  content: "";
-  background-image: url("../img/title_line.png");
-  height: 2px;
-  width: 300px;
-  position: absolute;
-  top: 40px;
-  left: 205px;
+  // &::before {
+  //   content: "";
+  //   background-image: url("../img/title_line.png");
+  //   height: 2px;
+  //   width: 300px;
+  //   position: absolute;
+  //   top: 40px;
+  //   left: 205px;
+  // }
+
+  @media (min-width: @tablet-width) {
+    max-width: unset;
+  }
 }
 
 .form__field-group--email-tel {
   padding-bottom: 23px;
-}
 
-.form__field-group--email-tel .form__title {
-  padding: 26px 0 35px;
-}
+  .form__title {
+    padding: 26px 0 35px;
+  }
 
-.form__field-group--email-tel li:not(:last-child) {
-  padding-bottom: 14px;
+  li:not(:last-child) {
+    padding-bottom: 14px;
+  }
+
+  @media (min-width: @tablet-width) {
+    padding-bottom: 76px;
+
+    .form__title {
+      padding: 26px 0 76px;
+    }
+
+    li:not(:last-child) {
+      padding-bottom: 20px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 76px;
+
+    .form__title {
+      padding: 26px 0 76px;
+    }
+
+    li:not(:last-child) {
+      padding-bottom: 20px;
+    }
+  }
 }
 
 .form__mail-label {
   width: 67px;
+
+  @media (min-width: @tablet-width) {
+    width: 75px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 75px;
+  }
 }
 
 .form__mail-label,
@@ -120,28 +225,56 @@
   text-transform: uppercase;
   border: 1px solid rgba(231, 231, 231, 1);
   width: 100%;
+
+  @media (min-width: @tablet-width) {
+    box-sizing: border-box;
+    height: 52px;
+    padding: 11px 20px;
+    font-size: 20px;
+    line-height: 30px;
+    color: #444444;
+    border: 1px solid #cdcdcd;
+  }
+
+  @media (min-width: @desktop-width) {
+    box-sizing: border-box;
+    height: 52px;
+    padding: 11px 20px;
+    font-size: 20px;
+    line-height: 30px;
+    color: #444444;
+    border: 1px solid #cdcdcd;
+  }
 }
 
 .form__title--comment {
   position: relative;
 
-  &::before {
-    content: "";
-    background-image: url("../img/title_line.png");
-    height: 2px;
-    width: 300px;
-    position: absolute;
-    top: 15px;
-    left: 140px;
-  }
+  // &::before {
+  //   content: "";
+  //   background-image: url("../img/title_line.png");
+  //   height: 2px;
+  //   width: 300px;
+  //   position: absolute;
+  //   top: 15px;
+  //   left: 140px;
+  // }
 }
 
 .form__field-group--comment {
   padding-bottom: 22px;
-}
 
-.form__field-group--comment .form__title {
-  padding-bottom: 37px;
+  .form__title {
+    padding-bottom: 37px;
+  }
+
+  @media (min-width: @tablet-width) {
+    padding-bottom: 76px;
+
+    .form__title {
+      padding-bottom: 76px;
+    }
+  }
 }
 
 .form__textarea {
@@ -157,32 +290,73 @@
   width: 100%;
   height: 150px;
   resize: none;
+
+  @media (min-width: @tablet-width) {
+    padding: 10px 19px;
+    font-size: 20px;
+    line-height: 30px;
+    color: #444444;
+    border: 1px solid #e7e7e7;
+    height: 174px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 10px 19px;
+    font-size: 20px;
+    line-height: 30px;
+    color: #444444;
+    border: 1px solid #e7e7e7;
+    height: 174px;
+  }
 }
 
 .form__title--checkboxes {
   position: relative;
 
-  &::before {
-    content: "";
-    background-image: url("../img/title_line.png");
-    height: 2px;
-    width: 300px;
-    position: absolute;
-    top: 15px;
-    left: 160px;
-  }
+  // &::before {
+  //   content: "";
+  //   background-image: url("../img/title_line.png");
+  //   height: 2px;
+  //   width: 300px;
+  //   position: absolute;
+  //   top: 15px;
+  //   left: 160px;
+  // }
 }
 
 .form__field-group--checkboxes {
   padding-bottom: 40px;
-}
 
-.form__field-group--checkboxes .form__title {
-  padding-bottom: 40px;
-}
+  .form__title {
+    padding-bottom: 40px;
+  }
 
-.form__field-group--checkboxes li:not(:last-child) {
-  padding-bottom: 25px;
+  li:not(:last-child) {
+    padding-bottom: 25px;
+  }
+
+  @media (min-width: @tablet-width) {
+    .form__title {
+      padding-bottom: 62px;
+    }
+
+    .form__list {
+      display: grid;
+      grid-template-columns: 221px 221px;
+      column-gap: 123px;
+      row-gap: 42px;
+    }
+
+    li:not(:last-child) {
+      padding-bottom: 0;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    .form__title {
+      padding-bottom: 62px;
+    }
+  }
 }
 
 .form__submit-button {
@@ -190,6 +364,24 @@
   padding: 7px 44px;
   font-size: 16px;
   line-height: 20px;
+
+  @media (min-width: @tablet-width) {
+    width: 282px;
+    height: 52px;
+    padding: 13px 45px;
+    font-size: 20px;
+    line-height: 20px;
+    margin-right: 64px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 20px;
+    line-height: 20px;
+    width: 568px;
+    height: 52px;
+    padding: 13px 188px;
+    margin-right: 84px;
+  }
 }
 
 .form__required-mark {
@@ -202,232 +394,41 @@
   text-align: center;
 }
 
-
-@media (min-width: @tablet-width) {
-  .form__title {
-    font-size: 36px;
-    line-height: 36px;
-    padding-bottom: 76px;
-  }
-
-  .form__description {
-    padding: 0 70px 66px;
-    font-size: 20px;
-    line-height: 30px;
-    width: 323px;
-  }
-
-  .form__list label {
-    font-size: 20px;
-    line-height: 30px;
-  }
-
-  .form__pet-input {
-    height: 52px;
-    padding: 11px 20px;
-    font-size: 20px;
-    line-height: 30px;
-    border: 1px solid #e7e7e7;
-  }
-
-  .form__field-group--pet li:not(:last-child) {
-    padding-bottom: 20px;
-  }
-
-  .form__field-group--pet {
-    padding: 0 0 72px 0;
-  }
-
-  .form__list--wrapper {
+.form__list--wrapper {
+  @media (min-width: @tablet-width) {
     border: 1px solid #e7e7e7;
     padding: 25px 28px;
   }
 
-  .form__field-group--radios {
-    padding: 0 0 49px 0;
-  }
-
-  .form__field-group--email-tel .form__title {
-    padding: 26px 0 76px;
-  }
-
-  .form__field-group--email-tel {
-    padding-bottom: 76px;
-  }
-
-  .form__mail-label {
-    width: 75px;
-  }
-
-  .form__mail-input,
-  .form__tel-input {
-    box-sizing: border-box;
-    height: 52px;
-    padding: 11px 20px;
-    font-size: 20px;
-    line-height: 30px;
-    color: #444444;
-    border: 1px solid #cdcdcd;
-  }
-
-  .form__field-group--email-tel li:not(:last-child) {
-    padding-bottom: 20px;
-  }
-
-  .form__field-group--comment {
-    padding-bottom: 76px;
-  }
-
-  .form__field-group--comment .form__title {
-    padding-bottom: 76px;
-  }
-
-  .form__textarea {
-    padding: 10px 19px;
-    font-size: 20px;
-    line-height: 30px;
-    color: #444444;
+  @media (min-width: @desktop-width) {
     border: 1px solid #e7e7e7;
-    height: 174px;
+    padding: 25px 28px;
   }
+}
 
-  .form__field-group--checkboxes .form__title {
-    padding-bottom: 62px;
-  }
-
-  .form__field-group--checkboxes .form__list {
-    display: grid;
-    grid-template-columns: 221px 221px;
-    column-gap: 123px;
-    row-gap: 42px;
-  }
-
-  .form__field-group--checkboxes li:not(:last-child) {
-    padding-bottom: 0;
-  }
-
-  .form__submit-button {
-    width: 282px;
-    height: 52px;
-    padding: 13px 45px;
-    font-size: 20px;
-    line-height: 20px;
-    margin-right: 64px;
-  }
-
-  .form__reqired-wrapper {
+.form__reqired-wrapper {
+  @media (min-width: @tablet-width) {
     display: flex;
     padding-bottom: 72px;
+
+    p {
+      font-size: 16px;
+      line-height: 16px;
+    }
   }
 
-  .form__reqired-wrapper p {
-    font-size: 16px;
-    line-height: 16px;
+  @media (min-width: @desktop-width) {
+    display: flex;
+    padding-bottom: 72px;
+
+    p {
+      font-size: 16px;
+      line-height: 16px;
+    }
   }
 }
 
 @media (min-width: @desktop-width) {
-  .form__title {
-    padding-bottom: 110px;
-  }
-
-  .form__description {
-    padding: 0 110px 66px;
-    width: 323px;
-  }
-
-  .form__pet-input {
-    height: 52px;
-    padding: 11px 20px;
-    font-size: 20px;
-    line-height: 30px;
-    border: 1px solid #e7e7e7;
-  }
-
-  .form__field-group--pet li:not(:last-child) {
-    padding-bottom: 20px;
-  }
-
-  .form__field-group--pet {
-    padding: 0;
-  }
-
-  .form__list--wrapper {
-    border: 1px solid #e7e7e7;
-    padding: 25px 28px;
-  }
-
-  .form__field-group--radios {
-    padding: 0;
-  }
-
-  .form__field-group--email-tel .form__title {
-    padding: 26px 0 76px;
-  }
-
-  .form__field-group--email-tel {
-    padding-bottom: 76px;
-  }
-
-  .form__mail-label {
-    width: 75px;
-  }
-
-  .form__mail-input,
-  .form__tel-input {
-    box-sizing: border-box;
-    height: 52px;
-    padding: 11px 20px;
-    font-size: 20px;
-    line-height: 30px;
-    color: #444444;
-    border: 1px solid #cdcdcd;
-  }
-
-  .form__field-group--email-tel li:not(:last-child) {
-    padding-bottom: 20px;
-  }
-
-  .form__field-group--comment {
-    padding-bottom: 76px;
-  }
-
-  .form__field-group--comment .form__title {
-    padding-bottom: 76px;
-  }
-
-  .form__textarea {
-    padding: 10px 19px;
-    font-size: 20px;
-    line-height: 30px;
-    color: #444444;
-    border: 1px solid #e7e7e7;
-    height: 174px;
-  }
-
-  .form__field-group--checkboxes .form__title {
-    padding-bottom: 62px;
-  }
-
-  .form__submit-button {
-    font-size: 20px;
-    line-height: 20px;
-    width: 568px;
-    height: 52px;
-    padding: 13px 188px;
-    margin-right: 84px;
-  }
-
-  .form__reqired-wrapper {
-    display: flex;
-    padding-bottom: 72px;
-  }
-
-  .form__reqired-wrapper p {
-    font-size: 16px;
-    line-height: 16px;
-  }
-
   .form__field-group--email-tel .form__list {
     display: grid;
     grid-template-columns: 570px 570px;
