--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -1,5 +1,17 @@
 .programs {
   padding: 20px;
+
+  @media (min-width: @tablet-width) {
+    padding: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 82px 110px 72px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 80px;
+  }
 }
 
 .programs__button {
@@ -7,15 +19,49 @@
   padding: 7px 44px 7px 70px;
   max-width: 280px;
   box-sizing: border-box;
+
+  @media (min-width: @tablet-width) {
+    position: absolute;
+    box-sizing: border-box;
+    text-decoration: none;
+    top: 370px;
+    width: 244px;
+    margin: 0 0 0 90px;
+    padding: 14px 30px 14px 38px;
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 0 0 0 80px;
+    top: 410px;
+  }
 }
 
 .programs__wrapper {
   background-color: #f2f2f2;
   padding: 30px 19px 22px 19px;
-}
 
-.programs__wrapper:not(:last-child) {
-  margin-bottom: 20px;
+  &:not(:last-child) {
+    margin-bottom: 20px;
+  }
+
+  @media (min-width: @tablet-width) {
+    background-color: #f2f2f2;
+    padding: 77px 316px 57px 52px;
+
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 77px 61px 59px 52px;
+
+    &:not(:last-child) {
+      margin-bottom: 0;
+    }
+  }
 }
 
 .programs__title {
@@ -28,9 +74,20 @@
   padding-bottom: 29px;
   text-transform: uppercase;
   position: relative;
+
+  @media (min-width: @tablet-width) {
+    font-size: 36px;
+    line-height: 36px;
+    margin: 0;
+    padding: 0 0 24px 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 0 0 73px 162px;
+  }
 }
 
-.programs__title--loss::before {
+.programs__loss::before {
   content: "";
   background-image: url("../img/cat_back_loss.png");
   background-repeat: no-repeat;
@@ -39,9 +96,25 @@
   position: absolute;
   left: 0;
   top: -5px;
+
+  @media (min-width: @tablet-width) {
+    background-image: url("../img/cat_back_loss--tab.png");
+    width: 200px;
+    height: 211px;
+    left: 394px;
+    top: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    background-image: url("../img/cat_back_loss--desk.png");
+    width: 100px;
+    height: 106px;
+    left: 0;
+    top: -35px;
+  }
 }
 
-.programs__title--gain::before {
+.programs__gain::before {
   content: "";
   background-image: url("../img/cat_back_gain.png");
   background-repeat: no-repeat;
@@ -50,6 +123,22 @@
   left: -8px;
   top: -5px;
   position: absolute;
+
+  @media (min-width: @tablet-width) {
+    background-image: url("../img/cat_back_gain--tab.png");
+    width: 268px;
+    height: 200px;
+    left: 360px;
+    top: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    background-image: url("../img/cat_back_gain--desk.png");
+    width: 134px;
+    height: 200px;
+    left: -15px;
+    top: -35px;
+  }
 }
 
 .programs__description {
@@ -60,6 +149,13 @@
   margin: 0;
   padding-bottom: 42px;
   position: relative;
+
+  @media (min-width: @tablet-width) {
+    font-size: 16px;
+    line-height: 24px;
+    margin: 0;
+    padding-bottom: 52px;
+  }
 }
 
 .programs__description::before {
@@ -69,6 +165,10 @@
   height: 1px;
   position: absolute;
   bottom: 20px;
+
+  @media (min-width: @tablet-width) {
+    content: none;
+  }
 }
 
 .programs__catalog-link {
@@ -79,113 +179,9 @@
   text-decoration: none;
   color: #000000;
   text-transform: uppercase;
-}
 
-@media (min-width: @tablet-width) {
-  .programs {
-    padding: 30px;
-  }
-
-  .programs__button {
-    position: absolute;
-    box-sizing: border-box;
-    text-decoration: none;
-    top: 370px;
-    width: 244px;
-    margin: 0 0 0 90px;
-    padding: 14px 30px 14px 38px;
-    font-size: 20px;
-    line-height: 20px;
-  }
-
-  .programs__wrapper {
-    background-color: #f2f2f2;
-    padding: 77px 316px 57px 52px;
-  }
-
-  .programs__wrapper:not(:last-child) {
-    margin-bottom: 30px;
-  }
-
-  .programs__title {
-    font-size: 36px;
-    line-height: 36px;
-    margin: 0;
-    padding: 0 0 24px 0;
-  }
-
-  .programs__title--loss::before {
-    background-image: url("../img/cat_back_loss--tab.png");
-    width: 200px;
-    height: 211px;
-    left: 394px;
-    top: 0;
-  }
-
-  .programs__title--gain::before {
-    background-image: url("../img/cat_back_gain--tab.png");
-    width: 268px;
-    height: 200px;
-    left: 360px;
-    top: 0;
-  }
-
-  .programs__description {
-    font-size: 16px;
-    line-height: 24px;
-    margin: 0;
-    padding-bottom: 52px;
-  }
-
-  .programs__description::before {
-    content: none;
-  }
-
-  .programs__catalog-link {
+  @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 30px;
-  }
-}
-
-@media (min-width: @desktop-width) {
-  .programs {
-    padding: 82px 110px 72px;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 80px;
-  }
-
-  .programs__button {
-    margin: 0 0 0 80px;
-    top: 410px;
-  }
-
-  .programs__wrapper {
-    padding: 77px 61px 59px 52px;
-  }
-
-  .programs__wrapper:not(:last-child) {
-    margin-bottom: 0;
-  }
-
-  .programs__title {
-    padding: 0 0 73px 162px;
-  }
-
-  .programs__title--loss::before {
-    background-image: url("../img/cat_back_loss--desk.png");
-    width: 100px;
-    height: 106px;
-    left: 0;
-    top: -35px;
-  }
-
-  .programs__title--gain::before {
-    background-image: url("../img/cat_back_gain--desk.png");
-    width: 134px;
-    height: 200px;
-    left: -15px;
-    top: -35px;
   }
 }
