--- a/source/less/blocks/stats.less
+++ b/source/less/blocks/stats.less
@@ -3,12 +3,23 @@
   flex-direction: row;
   justify-content: space-between;
   padding-bottom: 34px;
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 60px;
+    justify-content: flex-start;
+  }
 }
 
 .stats__wrapper {
   border: 1px solid #cdcdcd;
   position: relative;
   width: 124px;
+
+  @media (min-width: @tablet-width) {
+    &:first-child {
+      margin-right: 42px;
+    }
+  }
 }
 
 .stats__number {
@@ -19,6 +30,17 @@
   line-height: 24px;
   text-align: center;
   padding: 14px 21px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 30px;
+    line-height: 37px;
+  }
+
+  @media (min-width: @desktop-width) {
+    box-sizing: border-box;
+    width: 162px;
+    margin: 0;
+  }
 }
 
 .stats__text {
@@ -34,33 +56,9 @@
   width: 60px;
   bottom: -14px;
   left: 35px;
-}
 
-@media (min-width: @tablet-width) {
-  .stats__wrapper:first-child {
-    margin-right: 42px;
-  }
-
-  .stats__number {
-    font-size: 30px;
-    line-height: 37px;
-  }
-
-  .stats__text {
+  @media (min-width: @tablet-width) {
     font-size: 14px;
     line-height: 14px;
-  }
-}
-
-@media (min-width: @desktop-width) {
-  .stats {
-    padding-bottom: 60px;
-    justify-content: flex-start;
-  }
-
-  .stats__number {
-    box-sizing: border-box;
-    width: 162px;
-    margin: 0;
   }
 }
