--- a/source/less/blocks/products.less
+++ b/source/less/blocks/products.less
@@ -2,6 +2,8 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
+  display: flex;
+  align-items: center;
 
   @media (min-width: 320px) {
     margin: 0;
@@ -35,6 +37,7 @@
 }
 
 .products__card {
+  box-sizing: border-box;
   width: 280px;
   display: flex;
   flex-wrap: wrap;
