--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -13,7 +13,7 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  padding: 0;
+  padding: 0 20px 0;
   margin: 0;
 
   @media (min-width: @tablet-width) {
@@ -32,6 +32,20 @@
   }
 }
 
+.page-footer__item {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.page-footer__item:not(:last-child) {
+  border-bottom: 1px solid #d9d9d9;
+
+  @media (min-width: @tablet-width) {
+    border-bottom: none;
+  }
+}
+
 .page-footer__item:first-child {
   padding: 39px 76px 32px;
 
@@ -44,18 +58,21 @@
   padding: 20px 70px 21px;
 
   @media (min-width: @tablet-width) {
+    display: flex;
     padding: 0 133px 0 0;
   }
 }
 
 .page-footer__item:last-child {
+  width: 280px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 22px 0;
+  padding: 20px 0 40px 0;
 
   @media (min-width: @tablet-width) {
-    display: flex;
+    width: unset;
+    // display: flex;
     justify-content: unset;
     padding: 0;
 
@@ -78,7 +95,12 @@
 .page-footer__item:last-child .page-footer__link {
   text-decoration: none;
   color: #000000;
-  padding-right: 141px;
+  padding-right: auto;
+
+  @media (min-width: @tablet-width) {
+    width: 113px;
+    padding-right: 27px;
+  }
 }
 
 @media (min-width: @tablet-width) {
