--- a/source/less/blocks/partnership.less
+++ b/source/less/blocks/partnership.less
@@ -29,6 +29,7 @@
   line-height: 20px;
   padding-right: 2px;
   width: 100%;
+  max-width: 260px;
   text-transform: uppercase;
 
   @media (min-width: @tablet-width) {
@@ -49,6 +50,7 @@
   font-size: 14px;
   line-height: 20px;
   width: 100%;
+  max-width: 260px;
 
   @media (min-width: @tablet-width) {
     font-size: 16px;
