--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -16,9 +16,9 @@
 
 .programs__button {
   margin: 0 auto 20px auto;
-  padding: 7px 44px 7px 70px;
-  max-width: 280px;
-  box-sizing: border-box;
+  padding: 7px 70px 7px 70px;
+  max-width: 100%;
+  text-align: center;
 
   @media (min-width: @tablet-width) {
     position: absolute;
