--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -19,6 +19,18 @@
   cursor: pointer;
 }
 
+.header__nav-toogle--active {
+  background: transparent;
+  border: none;
+  width: 25px;
+  height: 20px;
+  padding: 0;
+  padding-top: 3px;
+  background-image: url("../img/close-menu--mob.svg");
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+
 @media (min-width: @tablet-width) {
   .header {
     padding: 24px 30px 45px 30px;
