--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -179,9 +179,20 @@
   text-decoration: none;
   color: #000000;
   text-transform: uppercase;
+  display: flex;
+  align-items: center;
+
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 30px;
+  }
+}
+
+.programs__catalog-icon {
+  padding-left: 15px;
+
+  @media (min-width: @tablet-width) {
+    padding-left: 25px;
   }
 }
