--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -1,14 +1,23 @@
 @white: #ffffff;
 
 .intro {
-  background-image: linear-gradient(to top, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/intro-bg-img.jpg");
+  background-image: linear-gradient(to top, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/intro-bg.png");
   background-repeat: no-repeat;
   background-position: right 40% bottom 53%;
-  background-size: 200%;
   background-color: #5f5f5f;
+  background-size: cover;
   font-family: "Oswald Regular", sans-serif;
   text-align: center;
   margin-bottom: 138px;
+  position: relative;
+
+  @media (min-resolution: 2dppx) {
+    width: 320px;
+    height: 302px;
+    background-size: 180%;
+    background-position: bottom 0%;
+    background-image: linear-gradient(to top, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/intro-bg@2x.jpg");
+  }
 
   @media (min-width: @tablet-width) {
     position: relative;
@@ -27,6 +36,31 @@
     background-repeat: no-repeat;
     background-position: right 40% bottom 53%;
     background-size: 200%;
+
+    &::before {
+      content: "";
+      position: absolute;
+      background-image: linear-gradient(to top, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/index-bg-desk.png");
+      width: 48%;
+      height: 694px;
+      left: 52%;
+      bottom: 0;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: left;
+
+      @media (min-resolution: 2dppx) {
+        width: 48%;
+        // height: 694px;
+        background-image: linear-gradient(to top, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/intro-bg@2x.jpg");
+      }
+    }
+  }
+}
+
+.header__logo-text {
+  @media (min-width: @tablet-width) {
+    display: none;
   }
 }
 
@@ -79,18 +113,13 @@
 
 .intro__img {
   margin-bottom: -140px;
+  z-index: 1;
 
   @media (min-width: @tablet-width) {
-    width: 100%;
-    height: 100%;
     margin: 0;
-    z-index: 0;
   }
 
   @media (min-width: @desktop-width) {
-    width: 552px;
-    height: 499px;
     margin: 0;
-    z-index: 0;
   }
 }
