--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -47,6 +47,18 @@
   }
 }
 
+.header__logo-img {
+  @media (min-width: @desktop-width) {
+    &:hover {
+      opacity: 80%;
+    }
+
+    &:active{
+      opacity: 65%;
+    }
+  }
+}
+
 @media (min-width: @desktop-width) {
   .header {
     padding: 53px 110px 73px;
