--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -9,4 +9,12 @@
   font-family: "Oswald Regular", sans-serif;
   font-weight: 400;
   border: none;
+
+  &:hover {
+    background-color: #5eaa2f;
+  }
+
+  &:active {
+    color: hsla(0, 0%, 100%, 0.308)
+  }
 }
