--- a/source/less/blocks/examples.less
+++ b/source/less/blocks/examples.less
@@ -1,13 +1,15 @@
 .examples {
   background-color: #eaeaea;
+  background-size: 50%;
   padding: 25px 20px 40px;
 
   @media (min-width: @tablet-width) {
-    background-color: #eaeaea;
+    background-image: linear-gradient(#fff 56%,#eaeaea 56% 100%);
     padding: 43px 30px 101px;
   }
 
   @media (min-width: @desktop-width) {
+    background-image: linear-gradient(#fff 23%,#eaeaea 23% 77%);
     padding: 25px 110px 40px;
     display: flex;
   }
@@ -26,6 +28,10 @@
     font-size: 60px;
     line-height: 60px;
     padding-bottom: 63px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 146px;
   }
 }
 
@@ -52,6 +58,7 @@
   line-height: 20px;
   text-transform: uppercase;
   padding-bottom: 20px;
+  text-align: center;
 
   @media (min-width: @tablet-width) {
     width: 174px;
@@ -71,6 +78,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-bottom: 99px;
   }
 
   @media (min-width: @desktop-width) {
