--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -113,13 +113,14 @@
 
 .intro__img {
   margin-bottom: -140px;
-  z-index: 1;
 
   @media (min-width: @tablet-width) {
     margin: 0;
   }
 
   @media (min-width: @desktop-width) {
+    position: relative;
     margin: 0;
+    z-index: 1;
   }
 }
