--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -96,6 +96,14 @@
       position: absolute;
       bottom: -10px;
     }
+
+    &:hover {
+      opacity: 70%;
+    }
+
+    &:disabled {
+      opacity: 50%;
+    }
   }
 
   @media (min-width: @desktop-width) {
