--- a/source/less/blocks/products-extra.less
+++ b/source/less/blocks/products-extra.less
@@ -5,11 +5,43 @@
   line-height: 24px;
   margin: 0;
   padding: 25px 0 36px;
+  display: inline-block;
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    height: 2px;
+    background-color: #68b738;
+    width: 300%;
+    top: 45%;
+    left: calc(100% + 21px);
+  }
 
   @media (min-width: @tablet-width) {
     font-size: 36px;
     line-height: 36px;
-    padding: 0 37px 80px;
+    padding: 0 0 80px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      height: 2px;
+      background-color: #68b738;
+      width: 300%;
+      top: 19%;
+      left: calc(100% + 37px);
+    }
+
+    &::before {
+      content: "";
+      position: absolute;
+      height: 2px;
+      background-color: #68b738;
+      width: 300%;
+      top: 19%;
+      right: calc(100% + 37px);
+    }
   }
 
   @media (min-width: @desktop-width) {
@@ -20,6 +52,8 @@
 }
 
 .products-extra__card {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   padding: 13px 0 19px 0;
   border-top: 1px solid #cdcdcd;
 
@@ -36,12 +70,10 @@
   }
 
   @media (min-width: @tablet-width) {
-    box-sizing: border-box;
-    width: 708px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 26px 37px 28px 37px;
+    border: 1px solid #cdcdcd;
+    display: grid;
+    padding: 26px 38px 28px;
+    grid-template-columns: repeat(3, 1fr);
 
     p {
       font-size: 16px;
@@ -50,12 +82,20 @@
   }
 
   @media (min-width: @desktop-width) {
-    width: auto;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+    // width: auto;
+    // display: flex;
+    // flex-direction: row;
+    // align-items: center;
+    // justify-content: space-between;
+    // padding: 15px 0 17px 0;
+    display: grid;
+    width: 896px;
     padding: 15px 0 17px 0;
+    border: 0;
+    grid-template-columns: 1fr 0.7fr 0.3fr 244px;
+    border-bottom: solid 1px #cdcdcd;
+    align-items: center;
+    justify-items: start;
   }
 }
 
@@ -78,7 +118,6 @@
   }
 
   @media (min-width: @desktop-width) {
-    width: 896px;
     margin: 0;
     padding: 0 80px 0 0;
     display: block;
@@ -93,40 +132,74 @@
   padding-bottom: 13px;
   margin: 0;
   text-transform: uppercase;
+  grid-column: 1/3;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 20px;
     padding-bottom: 25px;
+    grid-column: 1/2;
   }
 
   @media (min-width: @desktop-width) {
     padding-bottom: 0;
+    grid-column: 1/2;
   }
 }
 
-.products-extra__description {
-  display: flex;
-  justify-content: space-between;
+.products-extra__weight {
+  grid-column: 1/2;
   padding-bottom: 15px;
 
   @media (min-width: @tablet-width) {
-    display: flex;
-    justify-content: center;
-    padding-bottom: 15px;
-
-    p:first-child {
-      padding-right: 49px;
-    }
+    grid-column: 2/3;
   }
 
   @media (min-width: @desktop-width) {
+    grid-column: 2/3;
     padding-bottom: 0;
-    padding-right: 40px;
   }
 }
 
+.products-extra__price {
+  grid-column: 2/3;
+  text-align: right;
+  padding-bottom: 15px;
+
+  @media (min-width: @tablet-width) {
+    grid-column: 3/4;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-left: 15px;
+    padding-bottom: 0;
+    grid-column: 3/4;
+  }
+}
+
+// .products-extra__description {
+//   display: flex;
+//   justify-content: space-between;
+//   padding-bottom: 15px;
+
+//   @media (min-width: @tablet-width) {
+//     display: flex;
+//     justify-content: center;
+//     padding-bottom: 15px;
+
+//     p:first-child {
+//       padding-right: 49px;
+//     }
+//   }
+
+//   @media (min-width: @desktop-width) {
+//     padding-bottom: 0;
+//     padding-right: 40px;
+//   }
+// }
+
 .products-extra__order-button {
+  grid-column: 1/3;
   font-size: 16px;
   line-height: 20px;
   padding: 10px 109px;
@@ -137,11 +210,13 @@
     line-height: 20px;
     padding: 10px 109px;
     margin: 0;
+    grid-column: 1/4;
   }
 
   @media (min-width: @desktop-width) {
     width: 244px;
     padding: 10px 26px;
+    grid-column: 4/5;
   }
 }
 
