--- a/source/less/blocks/promotion.less
+++ b/source/less/blocks/promotion.less
@@ -19,6 +19,8 @@
   background-repeat: no-repeat;
   background-color: #5f5f5f;
   padding: 186px 61px 43px 58px;
+  display: flex;
+  justify-content: center;
 
   @media (min-width: @tablet-width) {
     background-size: 100%;
@@ -39,6 +41,7 @@
 
 .promotion__description {
   font-family: "Lato Regular", sans-serif;
+  width: 161px;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
@@ -70,7 +73,7 @@
   width: 78px;
   height: 80px;
   top: -120px;
-  left: 40px;
+  left: 30%;
 
   @media (min-width: @tablet-width) {
     background-image: url("../img/promotion__gift-icon.svg");
