--- a/source/less/blocks/examples.less
+++ b/source/less/blocks/examples.less
@@ -4,12 +4,12 @@
   padding: 25px 20px 40px;
 
   @media (min-width: @tablet-width) {
-    background-image: linear-gradient(#fff 56%,#eaeaea 56% 100%);
+    background-image: linear-gradient(#ffffff 56%, #eaeaea 56% 100%);
     padding: 43px 30px 101px;
   }
 
   @media (min-width: @desktop-width) {
-    background-image: linear-gradient(#fff 23%,#eaeaea 23% 77%);
+    background-image: linear-gradient(#ffffff 23%, #eaeaea 23% 77%);
     padding: 25px 110px 40px;
     display: flex;
   }
