--- a/source/less/blocks/stats.less
+++ b/source/less/blocks/stats.less
@@ -68,7 +68,7 @@
     line-height: 14px;
     padding: 0 10px;
     width: auto;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
   }
 
   @media (min-width: @desktop-width) {
