--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -12,7 +12,7 @@
   position: relative;
 
   @media (min-resolution: 2dppx) {
-    width: 320px;
+    // width: 320px;
     height: 302px;
     background-size: 180%;
     background-position: bottom 0%;
