--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -48,11 +48,14 @@
 
 .page-footer__item:first-child {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   padding: 39px 76px 32px;
+  align-items: center;
+  text-align: center;
 
   @media (min-width: @tablet-width) {
     padding: 0 146px 0 0;
+    justify-content: flex-start;
   }
 }
 
