Desktop overlay fix

--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -32,9 +32,9 @@
     line-height: 20px;
 
     @media (min-resolution: 2dppx) {
-      top: -42px;
-      position: relative;
-      margin: 0 0 526px 90px;
+      // top: 380px;
+      // position: absolute;
+      // margin: 0 0 0 90px;
     }
   }
 
