--- a/source/less/blocks/examples.less
+++ b/source/less/blocks/examples.less
@@ -2,6 +2,7 @@
   background-color: #eaeaea;
   background-size: 50%;
   padding: 25px 20px 40px;
+  border: none;
 
   @media (min-width: @tablet-width) {
     background-image: linear-gradient(#ffffff 56%, #eaeaea 56% 100%);
